2008-06-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-clientserver.py.in
	(ClientServer.pingExpectingPrefix): Wrote method.
	(ClientServer.test02_pingExpectingPrefix): Wrote method.
	(ClientServer.test05_clientConnectionLost): Wrote method.
	(ClientServer.clientConnectionLost.ReasonMockUp): Wrote method.

	* tests/test-protocol.py.in: Set verbose to 5 so messages are printed.
	(UGAMEProtocolTestCase.testConnectionLost): Added output search.
	(UGAMEProtocolTestCase.setUp): Switched verbosity to 5 so messages
	are printed.
	(UGAMEProtocolTestCase.testConnectionLostWithProtocolOk): Wrote method.
	(UGAMEProtocolTestCase.testHandleVersion): Added test for "protocol
	established" output (and for when it isn't done).
	(UGAMEProtocolTestCase.testProcessQueues): Added test for queue delay.
	(UGAMEProtocolTestCase.testHandleData): Added test for output from
	handleData().
	(UGAMEProtocolTestCase.testForceError): Wrote method.

2008-06-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test01_rsync_ok): Added search for
	PokerRsync::spawn message.
	(PokerChildrenTestCase.test04_rsync_fail_host_does_not_respond):
	Added search for ERROR: PokerRsync message.
	(PokerChildrenTestCase.test05_rsync_fail_no_network): Added search
	for processEnded message.
	(PokerChildrenTestCase.test12_testErrorFunction): Wrote method.
	(PokerChildrenTestCase.test01_rsync_ok.rsync_done): Added test for
	outReceived().

2008-06-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in (PokerChildrenTestCase): Switched
	to @SLEEP@ throughout.

	* configure.ac: Now checks for touch and sets @TOUCH@.

	* debian/control.unstable (Build-Depends): Added coreutils.

	* debian/control.lenny (Build-Depends): Added coreutils.

	* debian/control.hardy (Build-Depends): Added coreutils.

	* debian/control.gutsy (Build-Depends): Added coretuils.

	* debian/control.feisty (Build-Depends): Added coreutils.
